--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,19 @@
-*.js
+# git ignore
+
+# system
+.DS_Store
+
+# node
+# *.js
 !jest.config.js
 *.d.ts
 node_modules
-*.log
-.DS_Store
-cdk.out
-.venv
-__pycache__
-*.pyc
-*.pyo
-*.pyd
-.Python
-env/
-venv/
-ENV/
-.idea/
-*.swp
-*.swo
-*~
 
+# cdk asset staging directory
+.cdk.staging
+cdk.out
+dist
+cdk-outputs.json
+
+# env
+.env*
