--- a/package.json
+++ b/package.json
@@ -1,26 +1,43 @@
 {
     "name": "soccer-news-infra",
     "version": "1.0.0",
-    "description": "CDK stack for soccer news infrastructure",
-    "main": "lib/index.js",
+    "description": "Infrastructure for soccer news",
+    "license": "ISC",
+    "author": "Anuv Gupta",
+    "keywords": [],
+    "bin": {
+        "soccer-news-infra": "dist/bin/soccer-news-infra.js"
+    },
     "scripts": {
         "build": "tsc",
         "watch": "tsc -w",
+        "test": "jest",
         "cdk": "cdk",
-        "deploy": "cdk deploy",
-        "synth": "cdk synth"
+        "clean": "rm -rf dist && rm -rf cdk.out",
+        "deploy:dev": "./deploy.sh dev",
+        "deploy:prod": "./deploy.sh prod",
+        "bootstrap:dev": "./bootstrap.sh dev",
+        "bootstrap:prod": "./bootstrap.sh prod"
     },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
     "devDependencies": {
-        "@types/node": "^20.0.0",
-        "typescript": "~5.3.0",
-        "aws-cdk": "^2.100.0"
+        "@types/jest": "^29.5.14",
+        "@types/node": "22.7.9",
+        "aws-cdk": "^2.1018.1",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.2.5",
+        "ts-node": "^10.9.2",
+        "typescript": "~5.6.3"
     },
     "dependencies": {
-        "aws-cdk-lib": "^2.100.0",
-        "constructs": "^10.0.0",
-        "source-map-support": "^0.5.21"
-    }
+        "aws-cdk-lib": "^2.201.0",
+        "constructs": "^10.4.2"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/anuvgupta/soccer-news-infra.git"
+    },
+    "bugs": {
+        "url": "https://github.com/anuvgupta/soccer-news-infra/issues"
+    },
+    "homepage": "https://github.com/anuvgupta/soccer-news-infra#readme"
 }
