--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "target": "ES2020",
         "module": "commonjs",
         "lib": [
-            "es2020"
+            "es2020",
+            "dom"
         ],
         "declaration": true,
         "strict": true,
@@ -22,15 +23,15 @@
         "typeRoots": [
             "./node_modules/@types"
         ],
-        "outDir": "lib",
-        "rootDir": "."
+        "outDir": "./dist",
+        "rootDir": "./src"
     },
-    "include": [
-        "bin/**/*",
-        "lib/**/*"
-    ],
     "exclude": [
         "node_modules",
-        "cdk.out"
+        "cdk.out",
+        "dist"
+    ],
+    "include": [
+        "src/**/*.ts"
     ]
 }
