--- a/src/lambdas/job/Dockerfile
+++ b/src/lambdas/job/Dockerfile
@@ -10,5 +10,8 @@ RUN pip install --no-cache-dir -r ${LAMBDA_TASK_ROOT}/requirements.txt
 # Copy Lambda function code
 COPY index.py ${LAMBDA_TASK_ROOT}/
 
+# Copy competitions configuration file
+COPY competitions.txt ${LAMBDA_TASK_ROOT}/
+
 # Set the CMD to your handler
 CMD [ "index.handler" ]
