Add Discord notification functionality to job lambda and update environment variables for webhook URL

--- a/.github/workflows/cdk-deploy-dev.yml
+++ b/.github/workflows/cdk-deploy-dev.yml
@@ -46,6 +46,7 @@ jobs:
                   STAGE: dev
                   GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
                   OPENAI_API_KEY_DEV: ${{ secrets.OPENAI_API_KEY_DEV }}
+                  DISCORD_WEBHOOK_URL_DEV: ${{ secrets.DISCORD_WEBHOOK_URL_DEV }}
                   AWS_REGION: ${{ secrets.AWS_REGION }}
                   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
                   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
