--- a/.github/workflows/cdk-deploy-prod.yml
+++ b/.github/workflows/cdk-deploy-prod.yml
@@ -46,6 +46,7 @@ jobs:
                   STAGE: prod
                   GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
                   OPENAI_API_KEY_PROD: ${{ secrets.OPENAI_API_KEY_PROD }}
+                  DISCORD_WEBHOOK_URL_PROD: ${{ secrets.DISCORD_WEBHOOK_URL_PROD }}
                   AWS_REGION: ${{ secrets.AWS_REGION }}
                   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
                   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
